Fix spacing after final card-widescreen

--- a/assets/css/card-widescreen.css
+++ b/assets/css/card-widescreen.css
@@ -5,9 +5,9 @@
 * Browsers: last 4 version
 */
 
-.card-widescreen:last-child {
+/* .card-widescreen:last-child {
   margin-bottom: 0;
-}
+} */
 
 .card-widescreen__button-trio {
   display: -ms-flexbox;
